--- a/requirements_mac.txt
+++ b/requirements_mac.txt
@@ -76,7 +76,7 @@ Pygments==2.18.0
 PyMuPDF==1.25.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-dotenv==1.0.1
+python-dotenv
 pytz==2024.2
 PyYAML==6.0.2
 rank-bm25==0.2.2
@@ -92,7 +92,7 @@ sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
 starlette==0.20.4
-streamlit==1.40.2
+streamlit
 SudachiDict-full==20250129
 SudachiPy==0.6.10
 sympy==1.13.3
